# ata-project

./: ANALYSIS_INDEX.md  ANALYTICS_PLAN.md  CLASS_BASED_QUIZ_IMPLEMENTATION_PLAN.md  CLASS_QUIZ_FEATURE_COMPLETE.md  COMPREHENSIVE_AUTO_ADVANCE_FIX.md  CONVERSATION_ANALYSIS_AND_PLAN.md  Current state of app.txt  How to run server.txt  IMPLEMENTATION_TODO_LIST.md  IMPLEMENTATION_VERIFICATION.md  MIGRATION_FIX_GUIDE.md  PHASE_1_PROGRESS_REPORT.md  QUICK_FIX_MIGRATIONS.md  QUICK_TEST_GUIDE.md  QUIZ_API_ANALYSIS.md  QUIZ_API_QUICK_REFERENCE.md  QUIZ_API_SUMMARY.md  QUIZ_AUTO_ADVANCE_FIX_SUMMARY.md  QUIZ_BACKEND_SUMMARY.md  QUIZ_CREATION_IMPLEMENTATION_GUIDE.md  QUIZ_DATABASE_ANALYSIS.md  QUIZ_RESEARCH_FINDINGS.md  QUIZ_SYSTEM_CRITICAL_ANALYSIS.md  QUIZ_SYSTEM_DESIGN.md  README.md  RESEARCH_SUMMARY.md  YOUR_NEW_WORKFLOW.md  admin access.txt  all files extract.py  direcotory generator.py  directory_map.txt  file_location_guide.md  quiz_backend_analysis.md  quiz_creation_analysis.md  quiz_creation_flow_visual.md
ata-backend/: .dockerignore  .gitignore  DATABASE_SETUP.md  Database Schema for now.txt  Dockerfile.backup  Dockerfile.ghcr  README.md  add_total_pages_column.sql  alembic.ini  fix_autogenerated_migration.py  fix_migrations.py  nixpacks.toml  pyproject.toml  requirements.txt  reset_and_migrate.bat  reset_and_migrate.ps1
ata-backend/alembic/: env.py
ata-backend/app/: main.py
ata-backend/tests/: test_analytics_and_matching.py  test_assessment_models.py  test_assessment_review.py  test_assessment_service.py  test_data_assembly.py  test_database_service.py  (+5 more)
(+233 files in other folders)
